2003-03-30  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-header.c (g_mime_header_add): Don't try to encode
	the header here. This is not our responsibility.
	(g_mime_header_set): Same.

2003-03-27  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-utils.c (rfc2047_encode_word): Add 1 to enclen so as
	to protect against buffer overruns.
	(rfc2047_encode_phrase_get_words): if c > 127 && c < 256, then set
	encoding to MAX (encoding, 1), not 2.

2003-03-11  Charles Kerr <charles@rebelbase.com>

	* gmime/md5-utils.c (md5_get_digest_from_file): fix
	dangling file pointer.

2003-03-09  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/url-scanner.c (g_url_addrspec_end): Make sure inptr != pos
	+ 1, if it does, then return FALSE.
	
2003-03-06  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Check that the compiler supports the inline
	optimisation keyword (or variant) and #define it to 'inline'.

	* gmime/gtrie.c (trie_utf8_getc): Same.

	* gmime/gmime-filter-html.c (html_utf8_getc): Use the inline macro.

2003-03-03  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-filter-charset.c (filter_filter): Use outbuf -
	filter->outbuf to calculate how much data we've written - simpler
	and less likely to be wrong.
	(filter_complete): Same.

	* gmime/gmime-iconv.c: Modified to use the new cache
	implementation in cache.c

	* gmime/cache.[c,h]: New source files implementing an LRU cache.

	* gmime/list.[c,h]: New source files containing a really nice/fast
	linked-list implementation.

2003-03-02  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-iconv.c (iconv_cache_bucket_new): If the current
	list of cache buckets is non-NULL, set list->prev to the new
	bucket being prepended.
	(g_mime_iconv_open): Only expire unused if the cache size is
	greater than the max allowable size.

2003-02-27  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-stream-filter.c (stream_read): Set priv->flushed to
	TRUE if we call g_mime_filter_complete() on our filters.