@@ -1,5 +1,8 @@
 2003-03-30  Jeffrey Stedfast  <fejj@ximian.com>
 
+	* gmime/gmime-message.c (g_mime_message_set_subject): Encode the
+	subject before setting it in the raw header list.
+
 	* gmime/gmime-header.c (g_mime_header_add): Don't try to encode
 	the header here. This is not our responsibility.
 	(g_mime_header_set): Same.
